fixed regular scrollbar

--- a/app/assets/stylesheets/components/_slider.scss
+++ b/app/assets/stylesheets/components/_slider.scss
@@ -5,7 +5,7 @@
   display: flex;
 }
 
-::-webkit-scrollbar {
+.slider::-webkit-scrollbar {
   height: 12px;
 }
 
